Fix heading hierarchy problem - jumped from h1 to h3 to h2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,18 @@ body {
     padding-top: 15px;
 }
 
-h1, h2 {
+h1, .section-headings {
     font-family: 'Reggae One', Oxanium, sans-serif;
     color: rgb(144, 92, 226);
     letter-spacing: 2px;
     text-transform: uppercase;
 }
+
+.image-texts {
+    font-family: Oxanium;
+    font-size: 2.35rem;
+}
+
 
 h1 {
     font-size: 2.5rem;
